feat(x2a): added /projects/:projectId/modules/:moduleId/log endpoint
- Openapi definition and generated files.
- Router defitinition:
    - Rbac
    - Check with project/module
    - Check if the job has been finished.
    - k8s integration if not finished with streaming support.
- Test for the router.
